--- a/solo_parnt_system_front/package.json
+++ b/solo_parnt_system_front/package.json
@@ -10,15 +10,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
-    "chart.js": "^4.2.1",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.11",
+    "recharts": "^2.4.3",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
